--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,38 @@
 	display:flex;
 	justify-content: space-around;
 	align-items:center;
-	
+    width:100%;
+
 }
+
+img{
+	width:800px;
+	height:400px;
+	object-fit:cover;
+    padding-right:40px;
+
+}
+
+button{
+   align-items:center;
+   display:flex;
+	padding:20px;
+    background-color:green;
+	color:white;
+	border-radius:10px;
+    margin-inline:auto;
+}
+
+subsection{
+	display:flex;
+    flex-direction:column;
+    align-items:center;
+ 
+}
+
+h1,p{
+text-align:center;
+}
+
+
+
